<resources>
    <string name="app_name">frb</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Hello" />
    <string name="profile">Profile</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="order_now">Order Now</string>
    <string name="todo">Todo</string>
    <string name="item_name" />
    <string name="full_name">Full Name</string>
    <string name="mobile_number2">Mobile Number</string>
    <string name="address">Address</string>
    <string name="block_no_13_dypiemr">Block No.13, DYPIEMR</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="view_menu">View Menu</string>
    <string name="view_orders">View Orders</string>
    <string name="description">Description</string>
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="add_image">Add Image</string>
    <string name="todo2">TODO</string>
    <string name="upload">Upload</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="place_order">Place Order</string>
    <string name="name">Name</string>
    <string name="qty">qty</string>
    <string name="Qty">Qty</string>
    <string name="result">Result</string>
    <string name="edit_existing_items">Edit Existing Items</string>
    <string name="add_new_item">Add new item</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_phone_number_for_otp_verification">Enter your phone number for OTP verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="only_for_teachers">Only for teachers</string>
    <string name="address_text">Address :</string>
    <string name="total">Total</string>
    <string name="logo">LOGO</string>
    <string name="UID">UID</string>
    <string name="amount">Amount</string>
    <string name="phone">Phone</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="your_food_will_be_waiting_for_you">Your food will be waiting for you!</string>
    <string name="smiley">Smiley</string>
    <string name="uid">UID</string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="hello">Hello,</string>
    <string name="title_activity_admin_order">AdminOrderActivity</string>
    <string name="all_orders">All Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="status">Status</string>
    <string name="sign_out">Sign Out</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="next">Next</string>
    <string name="register_canteen">Register Canteen</string>
    <string name="razorpay_key">Razorpay Key</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_holder_name">Account Holder Name</string>
</resources>