<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/logo" />
    <com.google.android.material.textfield.TextInputLayout
        app:counterMaxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:counterTextColor="@color/black">
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/black"
        app:passwordToggleTint="@color/black"
        app:boxStrokeColor="@color/black"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        app:passwordToggleEnabled="true"
        android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:onClick="toEnterPhone"/>

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:onClick="toLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:onClick="toSignUp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="394dp" />


</LinearLayout>