<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".activities.CartActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/header_food_name"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/header_food_qty"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Qty"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/header_food_price"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/header_result"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/total"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginStart="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_view_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/text_for_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginLeft="10dp"
        android:text="@string/address_text"
        android:layout_marginStart="10dp" />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="@string/only_for_teachers"
        android:textColorHint="@color/white"

        android:autofillHints="@string/only_for_teachers"
        tools:ignore="TextFields" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="32dp"
        android:onClick="placeOrder"
        android:text="@string/place_order"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

</LinearLayout>
