<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.AdminMenuEditOptionsActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/logo" />
    <Button
        android:id="@+id/menu_editor_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="toMenuEditor"
        android:text="@string/add_new_item"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/existing_editor_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="toExistingMenuEditor"
        android:text="@string/edit_existing_items"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="397dp" />
</LinearLayout>