<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".activities.CartActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/header_transaction_id"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/UID"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/header_phone"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/header_time"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/header_bill_amount"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_view_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5" />

</LinearLayout>
