<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray"
    android:orientation="vertical">

    <Button
        android:id="@+id/toMenuEditor"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="toAdminMenuEditOptions"
        android:text="@string/edit_menu"
        app:backgroundTint="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/toMenu"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="toMenu"
        android:text="@string/view_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="324dp" />

    <Button
        android:id="@+id/toOrderList"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="toOrderList"
        android:text="@string/view_orders"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:id="@+id/toTeacherSignUp"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="toTeacherSignUp"
        android:text="@string/add_teacher"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="442dp" />




</LinearLayout>