<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context='.activities.MenuEditorActivity'>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo2"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteY="50dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="211dp" />


    <Button
        android:id="@+id/addImage"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_image"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="275dp" />

    <TextView
        android:id="@+id/textViewFoodName"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food_name"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="364dp" />

    <EditText
        android:id="@+id/editFoodName"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="388dp" />


    <TextView
        android:id="@+id/textViewFoodDescription"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="441dp" />

    <EditText
        android:id="@+id/editFoodDescription"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="465dp"
        android:singleLine="false"
        android:scrollHorizontally="false"/>

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="518dp" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints="mobileNo"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        tools:ignore="LabelFor,TextFields"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="542dp" />


    <Button
        android:id="@+id/uploadFood"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="addToMenu"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="595dp" />


</LinearLayout>