<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="140dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="164dp" />


    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="217dp" />

    <EditText
        android:id="@+id/editTextTextPersonLastName2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textViewPhoneNo"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mobile_number"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="294dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints="mobileNo"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="phone"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="318dp" />


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="371dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="395dp" />


    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="440dp" />

    <Button
        android:id="@+id/uploadFood"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="processRegistration"
        android:text="@string/register"

        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="501dp" />


</LinearLayout>