<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enter_phone_no"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activities.VerifyPhoneActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_marginTop="206dp"
        android:gravity="center_horizontal"
        android:hint="@string/verify_phone"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_phone_for_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_otp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/verify_phone_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields"
        android:autofillHints="@string/enter_your_phone_number_for_otp_verification" />

    <Button
        android:id="@+id/verify_phone_button"
        android:layout_width="209dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_verify_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_for_verification" />

    <ProgressBar
        android:id="@+id/progressBar_verify_phone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_phone_button" />
</androidx.constraintlayout.widget.ConstraintLayout>